[package]
name = "reverse-proxy-service"
version = "0.1.2"
edition = "2021"
authors = ["Masato Nakata <masaton@naughie.com>"]
description = "Tower service for reverse proxy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/naughie/reverse-proxy-service"
documentation = "https://docs.rs/reverse-proxy-service"
keywords = ["http", "tower", "axum", "reverse", "proxy"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[features]
default = ["http1"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
https = ["nativetls"]
nativetls = ["hyper-tls"]
rustls = ["rustls-webpki-roots"]
rustls-http2 = ["http2", "rustls", "hyper-rustls/http2"]
rustls-native-roots = ["__rustls", "hyper-rustls/rustls-native-certs"]
rustls-webpki-roots = ["__rustls", "hyper-rustls/webpki-roots"]

__rustls = ["hyper-rustls"]

[dependencies]
tower-service = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "tcp"] }

axum = { version = "0.6", features = [], optional = true }

hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.24", optional = true }

regex = "1.7"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "0.31"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
