[package]
name = "reverse-proxy-service"
version = "0.2.1"
edition = "2021"
authors = ["Masato Nakata <masaton@naughie.com>"]
description = "Tower service for reverse proxy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/naughie/reverse-proxy-service"
documentation = "https://docs.rs/reverse-proxy-service"
keywords = ["http", "tower", "axum", "reverse", "proxy"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
readme = "README.md"
include = ["src/", "LICENSE-*", "README.md"]

[features]
default = ["http1"]
http1 = ["hyper/http1", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper-util/http2"]
https = ["nativetls"]
nativetls = ["hyper-tls"]
rustls = ["rustls-webpki-roots"]
rustls-http2 = ["http2", "rustls", "hyper-rustls/http2"]
rustls-native-roots = ["__rustls", "hyper-rustls/rustls-native-certs"]
rustls-webpki-roots = ["__rustls", "hyper-rustls/webpki-roots"]

__rustls = ["hyper-rustls"]

[dependencies]
tower-service = "0.3"
http = "1.0.0"
http-body = "1.0.0"
hyper = { version = "1.1.0", features = ["client"] }

axum = { version = "0.7.3", features = [], optional = true }

hyper-tls = { version = "0.6.0", optional = true }
hyper-rustls = { version = "0.24.2", optional = true }

regex = "1.8"
log = "0.4.20"
hyper-util =  { version = "0.1.2", features = ["client", "client-legacy", "tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "0.31"
http-body-util = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
